# ASCIITerminalGUI

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  terminal_menu_lib.py
asciiterminalgui/: __init__.py  _exceptions.py  _input.py  _menu.py  _models.py  _navigation.py  _renderer.py
docs/: README_it.md
examples/: from_json.py  menu_config.json  programmatic.py
