[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asciiterminalgui"
version = "1.0.0"
description = "A complete Python library for building interactive terminal menus with keyboard navigation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ASCIITerminalGUI", email = "dev@asciiterminalgui.dev"}
]
keywords = ["tui", "terminal", "menu", "cli", "interface", "console", "ncurses"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/yourusername/asciiterminalgui"
Documentation = "https://github.com/yourusername/asciiterminalgui/blob/main/README.md"
Repository = "https://github.com/yourusername/asciiterminalgui"

[tool.setuptools]
py-modules = ["terminal_menu_lib"]
